# SuperHaojun

./: .env.example  README.md  models.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
docs/: analysis-hooks-and-handlers.md  architecture-AB.md  architecture-CD.md  architecture-EF.md  deploying-on-alicloud.md  website-agent-handoff.md
docs/insights/: 00-architecture-decisions.md  01-pi-ai-tricks.md
specs/: README.md  development-rules.md
specs/assets/: feature-doc-template.md
specs/features/: README.md  agent-loop.md  command-system.md  context-compaction.md  conversation-core.md  hooks-runtime.md  lsp-feedback.md  mcp-approval.md  mcp-runtime.md  memory-entry.md  memory-store.md  model-config.md  multi-agent.md  prompt-context.md  runtime-assembly.md  session-persistence.md  skills-plugin-runtime.md  tool-orchestration.md  tool-system.md  turn-runtime.md  webui-chat.md
specs/meta/: 2026-04-15-mcp-approval-implementation-plan.md  2026-04-15-runtime-foundation-implementation-plan.md  2026-04-15-specs-workspace-design.md  (+9 more)
src/: config.ts  index.ts
tests/: test_agent.py  test_agents.py  test_bus.py  test_commands.py  test_compact.py  test_config.py  test_core_tools.py  test_extensions.py  test_hooks.py  test_lsp.py  test_mcp.py  test_memory.py  test_messages.py  test_permissions.py  test_prompt.py  test_runtime.py  test_session.py  test_tool_orchestration.py  test_tools.py  test_transport.py  test_tui.py  test_turn_runtime.py  test_webui_server.py  test_webui_static.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
(+113 files in other folders)
