[project]
name = "superhaojun"
version = "0.1.0"
description = "SuperHaojun AI Harness — personal coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.82.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
superhaojun = "superhaojun.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superhaojun"]
